<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="FB_BvL_CleaningSystem" Id="{33be35a8-bbc7-4c5f-8b7d-f73b38460099}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_BvL_CleaningSystem
VAR_INPUT
END_VAR
VAR_OUTPUT
	bStatusOn : BOOL;
END_VAR
VAR
	OPC_UA				: FB_OPC_UA_READ;
	stOPC_UA_Server		: ST_OPC_UA_Server;
	sOPC_UA_Server_URL 	: STRING;
	sNamespaceName		: STRING;
	aNodes				: ARRAY[1..2] OF ST_OPC_UANode;
	nNodeCount			: UDINT := 2;
	stIndexRange		: ARRAY [1..nMaxIndexRange] OF ST_UAIndexRange;
	currentNode			: UDINT := 1;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[sOPC_UA_Server_URL 	:= GlobalVariables.sIP_BvL_CleaningSystem;
sNamespaceName 		:= 'urn:BeckhoffAutomation:Ua:PLC1';

(*Define Nodes to Read*)
aNodes[1].NodeID.sIdentifier			:= 'MAIN.VarPOU_LoTuS.localState.bAnforderung_PU300';
aNodes[1].NodeID.eIdentifierType		:= eUAIdentifierType_String;
aNodes[1].SizeOfDataType				:= SIZEOF(eUAType_Boolean);
aNodes[1].NodeAddInfo.nIndexRangeCount 	:= 0;
aNodes[1].NodeAddInfo.stIndexRange		:= stIndexRange;
aNodes[1].TargetVar						:= ADR(bStatusOn);

OPC_UA(
	stNode				:= aNodes[currentNode],
	sOPC_UA_Server_Url 	:= sOPC_UA_Server_URL,
	sNamespaceName		:= sNamespaceName);
currentNode := currentNode + 1;
IF currentNode > nNodeCount THEN
	currentNode := 1;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_BvL_CleaningSystem">
      <LineId Id="25" Count="3" />
      <LineId Id="149" Count="5" />
      <LineId Id="56" Count="4" />
      <LineId Id="62" Count="3" />
    </LineIds>
  </POU>
</TcPlcObject>