<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="FB_FlywheelMassStorage" Id="{831111bf-5c15-46f7-98ed-19a1b5ccc413}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_FlywheelMassStorage
VAR_OUTPUT
	bStatusOn : BOOL;
END_VAR
VAR
	OPC_UA				: FB_OPC_UA_READ;
	stOPC_UA_Server		: ST_OPC_UA_Server;
	sOPC_UA_Server_URL 	: STRING;
	sNamespaceName		: STRING;
	aNodes				: ARRAY[1..4] OF ST_OPC_UANode;
	nNodeCount			: UDINT := 4;
	stIndexRange		: ARRAY [1..nMaxIndexRange] OF ST_UAIndexRange;
	currentNode			: UDINT := 1;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[sOPC_UA_Server_URL 	:= GlobalVariables.sIP_FlywheelMassStorage;
sNamespaceName 		:= 'http://www.boschrexroth.com/IndraLogic';

(*Define Nodes to Read*)
aNodes[1].NodeID.sIdentifier			:= 'Application.Elektrische_Energiespeicher.Zustand_Gesamt.Kuehlung_Anforderung';
aNodes[1].NodeID.eIdentifierType		:= eUAIdentifierType_String;
aNodes[1].SizeOfDataType				:= DINT_TO_UDINT(eUAType_Boolean);
aNodes[1].NodeAddInfo.nIndexRangeCount 	:= 0;
aNodes[1].NodeAddInfo.stIndexRange		:= stIndexRange;
aNodes[1].TargetVar						:= ADR(bStatusOn);

OPC_UA(
	stNode				:= aNodes[currentNode],
	sOPC_UA_Server_Url 	:= sOPC_UA_Server_URL,
	sNamespaceName		:= sNamespaceName);
currentNode := currentNode + 1;
IF currentNode > nNodeCount THEN
	currentNode := 1;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_FlywheelMassStorage">
      <LineId Id="69" Count="9" />
      <LineId Id="86" Count="8" />
    </LineIds>
  </POU>
</TcPlcObject>